# vr-headset-project

./: .gitignore  README.md
DeepSeekHelp/: cube_renderer.cpp  cube_renderer.hpp  main.cpp
raspberrypi-folders/cpp-opengl-test/: build.sh  gltest.cpp
raspberrypi-folders/python-vr-headset/: simple_read_uart.py  vr2d_cube.py
raspberrypi-folders/vr-cpp-headset/: CMakeLists.txt  build.sh  main.cpp  uart.cpp  uart.hpp
raspberrypi-vr-headset/: read_uart.py  vr2d_cube.py
stm32-firmware-folder/: .cproject  .project  stm32-firmware-project Debug.launch  stm32-firmware-project.ioc
stm32-firmware-folder/Core/Inc/: MahonyAHRS.h  mpu6050.h
stm32-firmware-folder/Core/Src/: MahonyAHRS.c  main.c  mpu6050.c  stm32f4xx_hal_msp.c
